itutuloy pa sa responsive pangmobile

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-    <!-- Header -->
-    <header class="header">
+    <!--HEADER-->
+    <header class="header" data-aos="fade-up">
       <div class="container">
         <div class="header__wrapper">
           <div class="header__logo">
-            <img src="./INSIDE STYLE/img/LOGO.png" alt="Internet Diff" />
+            <img src="./INSIDE STYLE/img/LOGO.png" alt="logo" />
           </div>
           <nav>
             <ul class="header__nav">
@@ -27,6 +27,10 @@
               <li><a href="./contact.html">CONTACTS</a></li>
             </ul>
           </nav>
+          <div class="toggle__menu">
+            <span></span><span></span><span></span>
+          </div>
+          <!-- dito ilalagayyyyy -->
         </div>
       </div>
     </header>
@@ -196,5 +200,14 @@
         </div>
       </div>
     </footer>
+
+        <!-- SCRIPT -->
+    <script src="./js/toggle__menu.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
+</html>
   </body>
 </html>
