--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-    <!-- Header -->
-    <header class="header">
+    <!--HEADER-->
+    <header class="header" data-aos="fade-up">
       <div class="container">
         <div class="header__wrapper">
           <div class="header__logo">
-            <img src="./INSIDE STYLE/img/LOGO.png" alt="Internet Diff" />
+            <img src="./INSIDE STYLE/img/LOGO.png" alt="logo" />
           </div>
           <nav>
             <ul class="header__nav">
@@ -27,33 +27,62 @@
               <li><a href="./contact.html">CONTACTS</a></li>
             </ul>
           </nav>
+          <div class="toggle__menu">
+            <span></span><span></span><span></span>
+          </div>
+          <!-- dito ilalagayyyyy -->
         </div>
       </div>
     </header>
-    <!-- CONTACT BANNER -->
-    <section class="contactBanner">
+
+    <section class="contact">
       <div class="container">
-        <div class="contactBanner__wrapper">
-          <h1>Contact Us</h1>
-          <p>
-            Feel free to contact us any time. We will get back to you as soon as we can!</p>
+        <div class="contact__title"></div>
+        <h1>Contact Us</h1>
+        <p>
+          Feel free to contact us any time. We will get back to you as soon as
+          we can!
+        </p>
+        <div class="contact__wrapper">
+          <form action="">
+            <input type="text" placeholder="Name" />
+            <input type="email" placeholder="Email Address" />
+            <textarea placeholder="Message" id=""></textarea>
+            <a href="" class="btnn bg-dark">SEND</a>
+          </form>
+          <!-- info -->
+          <div class="contact__info">
+            <h3>Info</h3>
+            <table>
+              <tr>
+                <td>
+                  <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </td>
+                <td>inside@gmail.com</td>
+              </tr>
+              <tr>
+                <td>
+                  <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </td>
+                <td>+639 123 4567 890</td>
+              </tr>
+              <tr>
+                <td>
+                  <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </td>
+                <td>Los Angeles California</td>
+              </tr>
+              <tr>
+                <td>
+                  <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </td>
+                <td>8:00 am - 5:00 am (PH Time)</td>
+              </tr>
+            </table>
+          </div>
         </div>
-
-    <!-- STYLE -->
-     <div class="contactbtn">
-      <div class="container">
-        <div class="contactbtn__wrapper">
-            <form>
-             <label for="fname">First Name</label>
-             <input type="text" id="fname" name="fname">
-             <label for="lname">Last Name</label>
-             <input type="text" id="lname" name="lname">
-            </form>
-        </div>        
-     </div>
-
-
-
+      </div>
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
