tapos na ito, check check nalangs

--- a/catalog.html
+++ b/catalog.html
@@ -32,6 +32,7 @@
           <div class="toggle__menu">
             <span></span><span></span><span></span>
           </div>
+          <!-- dito ilalagayyyyy -->
         </div>
       </div>
     </header>
